# personas_aleatorias

./: .gitignore  Cargo.toml  README.md  data.json
src/: lib.rs  main.rs
