[package]
name = "random_person"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
date_time_parser = "0.2.0"
json = "0.12.4"
phf = { version = "0.11.1", features = ["phf_macros", "macros"] }
rand = "0.8.5"
